<resources>
    <string name="app_name">Class Activity SQLITE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_title">Welcome</string>
    <string name="hint_full_name">Enter Full Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="btn_add">Add</string>
    <string name="btn_list">Show All Users</string>
    <string name="title_activity_users_list">All Users</string>
    <string name="user_edit">Edit User</string>
    <string name="user_delete">Delete User</string>
    <string name="title_activity_manage_user">Manage User</string>
</resources>
